@@ -5,7 +5,7 @@
 <body>
 <hr>
 <h1>ecasound</h1>
-<h2>08.07.2008</h2>
+<h2>16.08.2008</h2>
 
 <html><head>
 <link rev="made" href="mailto:kvehmanen -at- eca -dot- cx">
@@ -22,7 +22,7 @@
 <hr>
 <h1>ecasound(1)</h1>
 <h2> Multimedia software</h2>
-<h2>08.07.2008</h2>
+<h2>16.08.2008</h2>
 
 
 <p>
@@ -420,12 +420,15 @@ AIFF file with filename "foo.wav").
 <p>
 <p><dt><strong>Loop device</strong><dd> 
 Loop devices make it possible to route (loop back) data between 
-chains. Option syntax is <strong>-[io][:]loop,id_number</strong>. If you add
-a loop output with id '1', all data written to this output is routed
-to all loop inputs with id '1'. You can attach the same loop
-device to multiple inputs and outputs.
+chains. Option syntax is <strong>-[io][:]loop,tag</strong>. If you add
+a loop output with tag '1', all data written to this output is routed
+to any loop input with tag '1'. The tag can be either numerical
+(e.g. '-i:loop,1') or a string (e.g. "-i:loop,vocals"). Like 
+with other input/output objects, you can attach the same loop 
+device to multiple chains and this way split/mix the signal.
 <p>
-Note: this 'loop' device is different from 'audioloop'.
+Note: this 'loop' device is different from 'audioloop' (latter
+added to ecasound v2.5.0).
 <p>
 <p><dt><strong>Mikmod</strong><dd>
 If mikmod support was enabled at compile-time, this
