@@ -2,7 +2,7 @@ mailto(kvehmanen -at- eca -dot- cx)
 
 manpage(ecasound)
        (1)
-       (08.07.2008)
+       (16.08.2008)
        ()
        (Multimedia software)
 
@@ -401,12 +401,15 @@ AIFF file with filename "foo.wav").
 
 dit(Loop device) 
 Loop devices make it possible to route (loop back) data between 
-chains. Option syntax is bf(-[io][:]loop,id_number). If you add
-a loop output with id '1', all data written to this output is routed
-to all loop inputs with id '1'. You can attach the same loop
-device to multiple inputs and outputs.
+chains. Option syntax is bf(-[io][:]loop,tag). If you add
+a loop output with tag '1', all data written to this output is routed
+to any loop input with tag '1'. The tag can be either numerical
+(e.g. '-i:loop,1') or a string (e.g. "-i:loop,vocals"). Like 
+with other input/output objects, you can attach the same loop 
+device to multiple chains and this way split/mix the signal.
 
-Note: this 'loop' device is different from 'audioloop'.
+Note: this 'loop' device is different from 'audioloop' (latter
+added to ecasound v2.5.0).
 
 dit(Mikmod)
 If mikmod support was enabled at compile-time, this
