@@ -61,8 +61,8 @@ class ECA_OBJECT_FACTORY {
 
   static AUDIO_IO* create_audio_object(const std::string& arg);
   static MIDI_IO* create_midi_device(const std::string& arg);
-  static AUDIO_IO* create_loop_output(const std::string& argu, std::map<int,LOOP_DEVICE*>* loop_map);
-  static AUDIO_IO* create_loop_input(const std::string& argu, std::map<int,LOOP_DEVICE*>* loop_map);
+  static AUDIO_IO* create_loop_output(const std::string& argu, std::map<std::string,LOOP_DEVICE*>* loop_map);
+  static AUDIO_IO* create_loop_input(const std::string& argu, std::map<std::string,LOOP_DEVICE*>* loop_map);
   static CHAIN_OPERATOR* create_chain_operator (const std::string& arg);
   static CHAIN_OPERATOR* create_ladspa_plugin (const std::string& arg);
   static GENERIC_CONTROLLER* create_controller (const std::string& arg);
