@@ -1,3 +1,7 @@
+2008-08-16  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
+
+	* audioio-loop.h (id): Renamed to tag().
+
 2008-07-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
 
 	* eca-chainsetup.cpp (audio_object_open_info): Renamed from
